force-app/main/default/objects/Accounting_Period__c/Accounting_Period__c.object-meta.xml
<CustomObject>
    <label>BT BT Accounting Period</label>
    <nameField>
        <label>BT Accounting Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT BT Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>