force-app/main/default/objects/Accounting_Period__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>