force-app/main/default/objects/Accounting_Period__c/fields/Period_Id__c.field-meta.xml
<CustomField>
    <fullName>Period_Id__c</fullName>
    <label>Period Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>